Using Docker Hup

--- a/hands-on/Docker/docker-09- Setup Docker on AWS EC2 ( Means we need deploy app in EC2 )/docker-compose.yml
+++ b/hands-on/Docker/docker-09- Setup Docker on AWS EC2 ( Means we need deploy app in EC2 )/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   node-app:
     container_name: app-06
+    image: sh3poz/node-app01
     volumes:
       - C:\Users\Hassan\Desktop\node-app\source:/app/source:ro
     ports:
