--- a/hands-on/Docker/docker-09- Setup Docker on AWS EC2 ( Means we need deploy app in EC2 )/docker-compose.yml
+++ b/hands-on/Docker/docker-09- Setup Docker on AWS EC2 ( Means we need deploy app in EC2 )/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   node-app:
     container_name: app-06
     image: sh3poz/node-app01
-    volumes:
-      - C:\Users\Hassan\Desktop\node-app\source:/app/source:ro
+    env_file:
+      - ./.env
     ports:
       - "4000:4000"
     depends_on:
